checkout/pages/class_checkin/class_checkin.css
	.tile {
	text-align: center;
	padding-bottom: 2em;
}

table {
	display: inline-block;
}

label {
	margin-right: 1em;
}

td {
	padding: 1em;
	box-shadow: 0 0 .5em rgba(255,255,255,0.8);
}

select,
input {
	font-size: 1em;
	padding: .1em;
}

.sheet {
	padding-bottom: 0;
	margin-left: 1em;
	margin-right: 1em;
	cursor: pointer;
	position: relative;
}

.sheet .field {
	padding: .5em 1em;
	display: inline-block;
	width: 14em;
}

.sheet .field:nth-child(1) { width: 30em; }
.sheet .field:nth-child(2) { width: 15em; }

.sheet td.field {
	width: 15em;
}

.reservations {
	box-shadow: 0 0 .5em white;
  margin: 1em 0;
}

.sheet tr:nth-child(odd) {
  background: rgba(255,255,255,0.2);
}

.sheet td {
	padding: .25em;
	box-shadow: none;
}
	
.hidden { display: none; }

button {
	font-size: 1em;
}

.count {
	position: absolute;
	right: 1em;
	top: .25em; bottom: .25em;
	background: blue;
	color: white;
	width: 2em;
	height: 2em;
	border-radius: 2em;
	line-height: 2em;
}

.edit {
  display: inline-block;
  position: absolute;
  top: .25em;
  right: 3em;
  width: 2em;
  height: 2em;
  background: url('list.svg');
  background-size: contain;
  margin: auto;
  transition: all .2s ease-in-out;
}

.delete {
  display: inline-block;
  position: absolute;
  top: .25em;
  right: .5em;
  width: 2em;
  height: 2em;
  background: url('closecircle.png');
  background-size: contain;
  margin: auto;
  box-shadow: 0 0 0.1em white;
  border-radius: 1em;
  transition: all .2s ease-in-out;
}

.dropdown {
  width: 2em;
  height: 2em;
  position: absolute;
  left: .5em;
  top: .25em;
  margin: auto;
  transition: all .2s ease-in-out;

}

.dropdown .arrow {
    background: url('dropdown.svg');
    background-size: contain;
    transition: all .2s ease-in-out;
    height: 100%;
}

.edit:hover,
.delete:hover,
.dropdown:hover {
  transform: scale(1.1);
}

.quarter_turn .arrow {
  transform: rotate(-90deg);
}

